- Introduced MapStruct for mapping